--- a/tools/poster/src/template.html
+++ b/tools/poster/src/template.html
@@ -96,12 +96,12 @@
       <!-- Squadre -->
       <section class="teams">
         <div class="team" style="justify-self:end">
-          <span>Petriolese</span>
-          <img class="crest" src="../assets/petriolese.webp" alt="Petriolese">
+          <span>{{homeTeamName}}</span>
+          <img class="crest" src="{{homeLogo}}" alt="{{homeTeamName}}">
         </div>
         <div class="vs">VS</div>
         <div class="team" style="justify-self:start">
-          <img class="crest" src="../assets/logos/{{awaySlug}}.webp" alt="{{awayTeamName}}">
+          <img class="crest" src="{{awayLogo}}" alt="{{awayTeamName}}">
           <span>{{awayTeamName}}</span>
         </div>
       </section>
