--- a/countdown_with_hints.html
+++ b/countdown_with_hints.html
@@ -623,6 +623,7 @@ if (competizione){
   .coach{position:fixed;inset:0;background:rgba(5,7,10,.6);backdrop-filter:blur(2px);display:none;align-items:center;justify-content:center;z-index:9999}
   .coach .card{background:#0f131b;border:1px solid #243049;border-radius:16px;padding:16px 18px;color:#dfe7ff;max-width:520px}
   .coach .card h3{margin:0 0 6px;font:700 16px system-ui}
+  .coach .card p{margin:.35rem 0;font:500 13px/1.35 system-ui}
   .coach .card ul{margin:.25rem 0 0 1.1rem;padding:0}
   .coach .card li{margin:.25rem 0;font:500 13px/1.35 system-ui}
   .coach .ok{margin-top:10px;background:#1f6feb;border:0;border-radius:10px;color:#fff;padding:.5rem .8rem;font:600 13px;cursor:pointer}
@@ -631,21 +632,31 @@ if (competizione){
 <button class="help-chip" id="helpChip" aria-label="Aiuto">i</button>
 <div class="help-sheet" id="helpSheet" role="dialog" aria-modal="true" aria-labelledby="helpTitle">
   <h4 id="helpTitle">Come funziona</h4>
-  <p>• Ora vedi il <strong>countdown</strong>. Poco prima del fischio d’inizio compariranno le <strong>formazioni</strong>.</p>
-  <p>• A fine gara appariranno <strong>risultato</strong> e <strong>marcatori</strong>.</p>
-  <p>• Usa i pulsanti in basso per passare tra le sezioni.</p>
+  <p>Su questa pagina apparirà la <strong>formazione della Petriolese</strong> 5 minuti prima del match.</p>
+  <p>E dopo il fischio finale, <strong>risultato e marcatori</strong>!</p>
+  <p>I tre pulsanti in alto servono per:</p>
+  <ul>
+    <li><strong>Condividere la pagina</strong></li>
+    <li><strong>Visitare il nostro IG</strong></li>
+    <li><strong>Unirsi al nostro Canale WHATSAPP, per aggiornamenti live!</strong></li>
+  </ul>
 </div>
 <div class="toast" id="toast" role="status" aria-live="polite"></div>
+
 <div class="coach" id="coach">
   <div class="card">
     <h3>Benvenuto 👋</h3>
+    <p>Su questa pagina apparirà la <strong>formazione della Petriolese</strong> 5 minuti prima del match.</p>
+    <p>E dopo il fischio finale, <strong>risultato e marcatori</strong>!</p>
+    <p>I tre pulsanti in alto servono per:</p>
     <ul>
-      <li>Prima del match: <strong>formazioni</strong>.</li>
-      <li>Dopo il fischio finale: <strong>risultato e marcatori</strong>.</li>
-      <li>I pulsanti in basso navigano tra le sezioni.</li>
+      <li><strong>Condividere la pagina</strong></li>
+      <li><strong>Visitare il nostro IG</strong></li>
+      <li><strong>Unirsi al nostro Canale WHATSAPP, per aggiornamenti live!</strong></li>
     </ul>
     <button class="ok" id="coachOk">Capito</button>
   </div>
+</div>
 </div>
 
 </body>
