--- a/countdown_with_hints.html
+++ b/countdown_with_hints.html
@@ -634,7 +634,7 @@ if (competizione){
   <h4 id="helpTitle">Come funziona</h4>
   <p>Su questa pagina apparirà la <strong>formazione della Petriolese</strong> 5 minuti prima del match.</p>
   <p>E dopo il fischio finale, <strong>risultato e marcatori</strong>!</p>
-  <p>I tre pulsanti in alto servono per:</p>
+  <p>I tre pulsanti in alto a sinistra servono per:</p>
   <ul>
     <li><strong>Condividere la pagina</strong></li>
     <li><strong>Visitare il nostro IG</strong></li>
@@ -648,7 +648,7 @@ if (competizione){
     <h3>Benvenuto 👋</h3>
     <p>Su questa pagina apparirà la <strong>formazione della Petriolese</strong> 5 minuti prima del match.</p>
     <p>E dopo il fischio finale, <strong>risultato e marcatori</strong>!</p>
-    <p>I tre pulsanti in alto servono per:</p>
+    <p>I tre pulsanti in alto a sinistra servono per:</p>
     <ul>
       <li><strong>Condividere la pagina</strong></li>
       <li><strong>Visitare il nostro IG</strong></li>
