--- a/countdown.html
+++ b/countdown.html
@@ -252,7 +252,8 @@
     </button>
   </div>
 
-<script>
+  <script src="js/sheet-utils.js"></script>
+  <script>
 /* ====== SHEET CONFIG ====== */
 const SHEET_FILE_ID='1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
 const META_GID='254048258';
@@ -260,52 +261,11 @@ const OPP_GID='1284472120';
 const PUBLISHED_META_URL='';
 const PUBLISHED_OPP_URL='';
 
-/* ====== HELPERS ====== */
-const gvizCsvURL=(fileId,gid)=>`https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
-function pubCsvURL(pubhtmlUrl){
-  const u=new URL(pubhtmlUrl); const parts=u.pathname.split('/'); const idIdx=parts.findIndex(p=>p==='e')+1; const id=parts[idIdx]||'';
-  const root=`${u.protocol}//${u.host}${parts.slice(0,idIdx).join('/')}/${id}`;
-  return `${root}/pub?gid=${encodeURIComponent(u.searchParams.get('gid')||'0')}&single=true&output=csv`;
+const Sheets = window.PetrioleseSheets;
+if(!Sheets){
+  throw new Error('PetrioleseSheets utils not loaded');
 }
-function parseCSV(text){
-  let t=String(text||'').replace(/^\uFEFF/,'').replace(/\r\n?/g,'\n');
-  const lines=t.split('\n').filter((ln,i)=>i===0||ln.trim().length>0);
-  if(!lines.length) return [];
-  const rows=[]; let row=[],cur='',inQ=false;
-  const pushCell=()=>{row.push(cur);cur=''}; const pushRow=()=>{rows.push(row);row=[]};
-  const s=lines.join('\n');
-  for(let i=0;i<s.length;i++){
-    const c=s[i],n=s[i+1];
-    if(inQ){ if(c=='"'&&n=='"'){cur+='"';i++} else if(c=='"'){inQ=false} else cur+=c }
-    else{ if(c=='"') inQ=true; else if(c==',') pushCell(); else if(c=='\n'){pushCell();pushRow()} else cur+=c }
-  }
-  if(cur!==''||row.length){pushCell();pushRow()}
-  const header=(rows.shift()||[]).map(h=>String(h||'').trim());
-  return rows.map(r=>Object.fromEntries(header.map((h,i)=>[h, r[i]!==undefined?r[i]:'' ])));
-}
-async function fetchCsvPrefer(fileId,gid,pubUrl){
-  try{ const res=await fetch(gvizCsvURL(fileId,gid),{cache:'no-store'}); if(res.ok){ return parseCSV(await res.text()); } }catch(e){}
-  if(pubUrl){ const res=await fetch(pubCsvURL(pubUrl),{cache:'no-store'}); return parseCSV(await res.text()); }
-  return [];
-}
-function normalizeMeta(rows){
-  const m=new Map();
-  rows.forEach(r=>{
-    const k=(''+(r.Key||r.KEY||'')).trim().toLowerCase();
-    const v=(''+(r.Value||r.VALORE||'')).trim();
-    if(k) m.set(k,v);
-  });
-  return m;
-}
-function normalizeOpp(rows){
-  const out=new Map();
-  rows.forEach(r=>{
-    const name=(''+(r.Squadra||r.squadra||'')).trim();
-    const url =(''+(r.Logo||r.logo||'')).trim();
-    if(name) out.set(name.toLowerCase(), url);
-  });
-  return out;
-}
+const { fetchCsvPrefer, normalizeMeta, normalizeOpp, resolveLogoSrc, setLogo, parseDateTimeIT } = Sheets;
 
 /* Venue & Maps helpers */
 function parseCoords(s){
@@ -352,18 +312,6 @@ function buildMapsLink({venue, lat, lon, link}) {
   return '#';
 }
 
-function slugify(s){ return String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase().replace(/&/g,'and').replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,''); }
-function resolveLogoSrc(teamName, oppMap){
-  const name=(teamName||'').trim(); if(!name) return '';
-  const fromSheet=oppMap.get(name.toLowerCase())||''; if(fromSheet) return fromSheet;
-  return `logos/${slugify(name)}.webp`;
-}
-function setLogo(imgEl, src, alt){
-  if(!src){ imgEl.style.visibility='hidden'; return; }
-  imgEl.alt=alt||''; imgEl.crossOrigin='anonymous'; imgEl.src=src;
-  imgEl.onload=()=>{ imgEl.style.visibility='visible'; };
-  imgEl.onerror=()=>{ imgEl.style.visibility='hidden'; };
-}
 function fmt2(n){ return String(Math.floor(Math.max(0,n))).padStart(2,'0'); }
 function formatOneLine(ms){
   if(ms<=0) return 'LIVE';
@@ -379,20 +327,6 @@ function formatWhen(dt){
     return dt.toLocaleString('it-IT', { weekday:'long', day:'2-digit', month:'long', year:'numeric', hour:'2-digit', minute:'2-digit' });
   }catch{ return dt.toString(); }
 }
-function parseDateTimeIT(dateStr, timeStr){
-  const s = String(dateStr||'').trim();
-  const t = String(timeStr||'').trim();
-  if(!s) return null;
-  const combined = s.includes(':') ? s : (t ? `${s} ${t}` : s);
-  const m1 = combined.match(/^(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{4})(?:[ T](\d{1,2}):(\d{2}))?$/);
-  const m2 = combined.match(/^(\d{4})[\/\-](\d{1,2})[\/\-](\d{1,2})(?:[ T](\d{1,2}):(\d{2}))?$/);
-  let y,M,d,h=15,min=0;
-  if(m1){ d=+m1[1]; M=+m1[2]-1; y=+m1[3]; if(m1[4]){h=+m1[4]; min=+m1[5];} }
-  else if(m2){ y=+m2[1]; M=+m2[2]-1; d=+m2[3]; if(m2[4]){h=+m2[4]; min=+m2[5];} }
-  else return new Date(s);
-  return new Date(y,M,d,h,min,0,0);
-}
-
 /* ====== INIT ====== */
 (async function init(){
   // Pulsanti social
