--- a/lineup.html
+++ b/lineup.html
@@ -433,6 +433,7 @@
 <!-- html2canvas -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
 
+<script src="js/sheet-utils.js"></script>
 <!-- Handlers + Campo + Render -->
 <script>
 /* ====== DISEGNO CAMPO ====== */
@@ -472,6 +473,12 @@ const OPP_GID='1284472120';
 const PUBLISHED_META_URL='';
 const PUBLISHED_OPP_URL='';
 
+const Sheets = window.PetrioleseSheets;
+if(!Sheets){
+  throw new Error('PetrioleseSheets utils not loaded');
+}
+const { fetchCsvPrefer, normalizeMeta, normalizeOpp, resolveLogoSrc, setLogo } = Sheets;
+
 const XI_NUMBERS=[1,2,5,3,7,6,4,11,10,9,8];
 const BENCH_NUMBERS=[12,13,14,15,16,17,18,19,20];
 
@@ -501,67 +508,10 @@ function canonicalFormation(name){
   return FORMATION_ALIASES[digits] || "3-4-1-2";
 }
 
-/* ====== LOGHI ====== */
-function normalizeOpp(rows){
-  const out=new Map();
-  rows.forEach(r=>{
-    const name=(''+(r.Squadra||r.squadra||'')).trim();
-    const url =(''+(r.Logo||r.logo||'')).trim();
-    if(name) out.set(name.toLowerCase(), url);
-  });
-  return out;
-}
-function slugify(s){ return String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase().replace(/&/g,'and').replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,''); }
-function resolveLogoSrc(teamName, oppMap){
-  const name=(teamName||'').trim(); if(!name) return '';
-  const fromSheet=oppMap.get(name.toLowerCase())||''; if(fromSheet) return fromSheet;
-  return `logos/${slugify(name)}.webp`;
-}
-function setLogo(imgEl, src, alt){
-  if(!src){ imgEl.style.visibility='hidden'; return; }
-  imgEl.alt=alt||''; imgEl.crossOrigin='anonymous'; imgEl.src=src;
-  imgEl.onload=()=>{ imgEl.style.visibility='visible'; };
-  imgEl.onerror=()=>{ imgEl.style.visibility='hidden'; };
-}
-
 /* ====== CSV/Sheet helpers ====== */
-const gvizCsvURL=(fileId,gid)=>`https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
-function pubCsvURL(pubhtmlUrl){
-  const u=new URL(pubhtmlUrl); const parts=u.pathname.split('/');
-  const idIdx=parts.findIndex(p=>p==='e')+1; const id=parts[idIdx]||'';
-  const root=`${u.protocol}//${u.host}${parts.slice(0,idIdx).join('/')}/${id}`;
-  return `${root}/pub?gid=${encodeURIComponent(u.searchParams.get('gid')||'0')}&single=true&output=csv`;
-}
-function parseCSV(text){
-  let t=String(text||'').replace(/^\uFEFF/,'').replace(/\r\n?/g,'\n');
-  const lines=t.split('\n').filter((ln,i)=>i===0||ln.trim().length>0);
-  if(!lines.length) return [];
-  const rows=[]; let row=[],cur='',inQ=false;
-  const pushCell=()=>{row.push(cur);cur=''}; const pushRow=()=>{rows.push(row);row=[]};
-  const s=lines.join('\n');
-  for(let i=0;i<s.length;i++){
-    const c=s[i],n=s[i+1];
-    if(inQ){ if(c=='"'&&n=='"'){cur+='"';i++} else if(c=='"'){inQ=false} else cur+=c }
-    else{ if(c=='"') inQ=true; else if(c==',') pushCell(); else if(c=='\n'){pushCell();pushRow()} else cur+=c }
-  }
-  if(cur!==''||row.length){pushCell();pushRow()}
-  const header=rows.shift().map(h=>String(h||'').trim());
-  return rows.map(r=>Object.fromEntries(header.map((h,i)=>[h, r[i]!==undefined?r[i]:'' ])));
-}
-async function fetchCsvPrefer(fileId,gid,pubUrl){
-  try{
-    const res=await fetch(gvizCsvURL(fileId,gid),{cache:'no-store'});
-    if(res.ok){ const txt=await res.text(); return parseCSV(txt); }
-  }catch(e){}
-  if(pubUrl){
-    const res=await fetch(pubCsvURL(pubUrl),{cache:'no-store'});
-    const txt=await res.text(); return parseCSV(txt);
-  }
-  return [];
-}
-const fetchDistRows   = ()=>fetchCsvPrefer(SHEET_FILE_ID, DIST_GID, PUBLISHED_DIST_URL);
-const fetchMetaRows   = ()=>fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
-const fetchOppRows    = ()=>fetchCsvPrefer(SHEET_FILE_ID, OPP_GID,  PUBLISHED_OPP_URL);
+const fetchDistRows   = () => fetchCsvPrefer(SHEET_FILE_ID, DIST_GID, PUBLISHED_DIST_URL);
+const fetchMetaRows   = () => fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
+const fetchOppRows    = () => fetchCsvPrefer(SHEET_FILE_ID, OPP_GID,  PUBLISHED_OPP_URL);
 
 function normalizeDist(rows){
   if(!rows||!rows.length) return new Map();
@@ -578,15 +528,6 @@ function normalizeDist(rows){
   return map;
 }
 const DISPLAY_NAME = full => String(full || '').trim();
-function normalizeMeta(rows){
-  const out=new Map();
-  rows.forEach(r=>{
-    const k=(''+(r.Key||r.KEY||'')).trim().toLowerCase();
-    const v=(''+(r.Value||r.VALORE||'')).trim();
-    if(k) out.set(k, v);
-  });
-  return out;
-}
 
 /* ====== POSIZIONAMENTI BADGE ====== */
 function computeTopForBadges(){
