--- a/lineup.html
+++ b/lineup.html
@@ -621,22 +621,24 @@ function playerNode(obj,x,y){
 function render(byNum, modulo="3412"){
   const layer=document.getElementById('players'); if(!layer) return;
   const fragment=document.createDocumentFragment();
-  const key = canonicalFormation(modulo);
+  const key=canonicalFormation(modulo);
+  const appendPlayer=(player,uv)=>{
+    const world=map(uv[0],uv[1]);
+    fragment.appendChild(playerNode(player,world.x,world.y));
+  };
 
-  if (key === "3-4-1-2"){
+  if(key==="3-4-1-2"){
     XI_NUMBERS.forEach((n,i)=>{
       const p=byNum.get(n)||{num:n,name:''};
-      const [u,v]=coords3412[i];
-      const world=map(u,v);
-      fragment.appendChild(playerNode(p,world.x,world.y));
+      const uv=coords3412[i]||[34,50];
+      appendPlayer(p,uv);
     });
-  } else {
-    const table = FORMATIONS_UV[key] || {};
+  }else{
+    const table=FORMATIONS_UV[key]||{};
     XI_NUMBERS.forEach(n=>{
       const p=byNum.get(n)||{num:n,name:''};
-      const uv = table[n] || [34,50];
-      const world=map(uv[0], uv[1]);
-      fragment.appendChild(playerNode(p,world.x,world.y));
+      const uv=table[n]||[34,50];
+      appendPlayer(p,uv);
     });
   }
 
